chore: Small fixes in the formatting of the code and removing unneccesary code/white spaces.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,6 @@ header h2{
 }
 
 button {
-    background-color: #white;
     border: none;
     padding: 10px 20px;
     text-align: center;
